--- a/web-project-2/src/components/Base/Header/Header.css
+++ b/web-project-2/src/components/Base/Header/Header.css
@@ -3,10 +3,12 @@
 .header {
     background-color: #44633f;
     padding: 20px;
+    width: 100%;
     position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
+    display: block;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 .nav-link {
