--- a/web-project-2/src/pages/Register/Register.css
+++ b/web-project-2/src/pages/Register/Register.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
-    width: 1440px;
-    height: auto;
-    background-color: black;
+    /* width: 1440px;
+    height: auto; */
+    /* background-color: black; */
     align-items: center;
-    padding: 30px;
+    /* padding: 30px; */
 }
 
 .register-field label {
