--- a/web-project-2/src/components/Base/Footer/Footer.css
+++ b/web-project-2/src/components/Base/Footer/Footer.css
@@ -1,10 +1,12 @@
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    display: flex;
     width: 100%;
+    height: 150px;
     background-color: #44633f;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: static;
+    bottom: 0;
 }
 
 .footer h3 {
