--- a/web-project-2/src/components/Base/Header/Header.css
+++ b/web-project-2/src/components/Base/Header/Header.css
@@ -30,6 +30,10 @@
     cursor: pointer;
 }
 
+.logout-btn:hover {
+    background-color: #bfc2bd;
+}
+
 .navigation-strip {
     display: flex;
     justify-content: center;
