--- a/web-project-2/src/pages/Register/Register.css
+++ b/web-project-2/src/pages/Register/Register.css
@@ -1,23 +1,44 @@
 .register-field {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
     align-items: center;
+    width: 100%;
+}
+
+.registration-grid {
+    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+    margin-bottom: 25px;;
+}
+
+.registration-grid label {
+    display: block;
+}
+
+.names-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
 }
 
 .register-field label {
     margin-bottom: 5px;
+    font-size: 20px;
 }
 
-.register-field input {
+.registration-grid input {
     padding: 10px;
     border: 1px solid #FBFEF9;
     border-radius: 5px;
-    width: 50%;
-    flex-grow: 0;
+    width: -webkit-fill-available;
 }
 
 .register-btn {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 20px;
     padding: 10px 20px;
     background-color: #5a9367;
     color: #FBFEF9;
@@ -30,6 +51,6 @@
     background-color: #44633f;
 }
 
-.register-btn > h1 {
+.register-btn>h1 {
     color: #FBFEF9;
 }
