Adjusted the Nutrition component

--- a/web-project-2/src/pages/Nutrition/Nutrition.css
+++ b/web-project-2/src/pages/Nutrition/Nutrition.css
@@ -1,27 +1,27 @@
-.section {
+.nutrition-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 20px; 
-}
-
-.about-image {
-    width: 200px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .image {
+    width: 30%;
     height: auto;
-}
-
-.text {
+  }
+  
+  .text {
     text-align: center;
-    margin: 0 20px; 
-}
-
-.text h1 {
-    font-size: 36px; 
-    margin: 0;   
-}
-
-.text h3 {
-    font-size: 18px; 
-    margin: 0;  
-}
+    margin: 0 20px;
+    flex: 1; /* Allow text to take up remaining space */
+  }
+  
+  .text h1 {
+    font-size: 36px;
+    margin: 0;
+  }
+  
+  .text h3 {
+    font-size: 18px;
+    margin: 0;
+  }
