Minor changes on the CSS

--- a/web-project-2/src/pages/Nutrition/Nutrition.css
+++ b/web-project-2/src/pages/Nutrition/Nutrition.css
@@ -13,7 +13,7 @@
   .text {
     text-align: center;
     margin: 0 20px;
-    flex: 1; /* Allow text to take up remaining space */
+    flex: 1; 
   }
   
   .text h1 {
