--- a/web-project-2/src/pages/CreatePost/CreatePost.css
+++ b/web-project-2/src/pages/CreatePost/CreatePost.css
@@ -11,7 +11,8 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr;
     gap: 20px;
-    margin-bottom: 25px;;
+    margin-bottom: 25px;
+    ;
 }
 
 .create-grid label {
@@ -52,6 +53,18 @@
     background-color: #44633f;
 }
 
-.create-btn > h1 {
+.create-btn>h1 {
     color: #FBFEF9;
+}
+
+.category-grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.category-grid select {
+    width: 100%;
+    padding: 5px;
 }
