--- a/web-project-2/src/pages/Posts/Posts.css
+++ b/web-project-2/src/pages/Posts/Posts.css
@@ -19,6 +19,8 @@
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
 
 .title-box {
