--- a/web-project-2/src/pages/Posts/Posts.css
+++ b/web-project-2/src/pages/Posts/Posts.css
@@ -20,7 +20,7 @@
     border-radius: 5px;
     margin-bottom: 10px;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 0.5fr;
 }
 
 .title-box {
@@ -47,4 +47,22 @@
     color: #FBFEF9;
     border-radius: 8px;
     height: 400px;
+}
+
+#details-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#details-btn > button {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 20px;
+    width: 80px;
+    height: 80px;
+    background-color: #fbfef9;
+    color: #44633f;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
