--- a/web-project-2/src/pages/Nutrition/Nutrition.css
+++ b/web-project-2/src/pages/Nutrition/Nutrition.css
@@ -1,27 +1,85 @@
 .nutrition-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-  }
-  
-  .image {
-    width: 30%;
-    height: auto;
-  }
-  
-  .text {
-    text-align: center;
-    margin: 0 20px;
-    flex: 1; 
-  }
-  
-  .text h1 {
-    font-size: 36px;
-    margin: 0;
-  }
-  
-  .text h3 {
-    font-size: 18px;
-    margin: 0;
-  }
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  width: 100%;
+}
+
+
+.top-grid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.image {
+  width: 30%; 
+  height: auto;
+  border-radius: 4px;
+}
+
+.text {
+  text-align: center;
+  flex: 1; 
+}
+
+.text h1 {
+  font-size: 36px;
+  margin: 0 0 20px 0;
+}
+
+.text h3 {
+  font-size: 18px;
+  margin: 0;
+}
+
+
+.nutrition-grid {
+  display: flex;
+  flex-direction:column; 
+  gap: 20px; 
+  width: 100%; 
+}
+
+.post-box {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #333; 
+  color: #fff; 
+}
+
+.title-box h2 {
+  margin: 0;
+}
+
+.content-box p {
+  margin: 10px 0 0 0;
+}
+
+.details-btn {
+  margin-top: 10px;
+  align-self: flex-start; 
+}
+
+#details-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#details-btn > button {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 20px;
+  width: 80px;
+  height: 80px;
+  background-color: #fbfef9;
+  color: #44633f;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
