Updated the Homepage and deleted the mostliked and mostcomment components

--- a/web-project-2/src/pages/Homepage/Homepage.css
+++ b/web-project-2/src/pages/Homepage/Homepage.css
@@ -23,10 +23,9 @@
 }
 
 .bottom-grid {
-    display: flex;
-    flex-direction:column; 
-    gap: 20px; 
-    width: 100%; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
   }
   
   .post-box {
