--- a/web-project-2/src/components/Base/Header/Header.css
+++ b/web-project-2/src/components/Base/Header/Header.css
@@ -10,6 +10,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
     justify-content: space-between;
+    z-index: 1000;
 }
 
 .nav-link {
