--- a/web-project-2/src/components/Base/Post/Post.css
+++ b/web-project-2/src/components/Base/Post/Post.css
@@ -6,6 +6,7 @@
     margin-bottom: 20px;
     display: grid;
     grid-template-columns: 3fr 0.5fr;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9);
 }
 
 .post-content-section {
