--- a/web-project-2/src/pages/DetailedPost/DetailedPost.css
+++ b/web-project-2/src/pages/DetailedPost/DetailedPost.css
@@ -5,12 +5,12 @@
 #detailed-post {
     display: grid;
     gap: 20px;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
 }
 
 #detailed-title-details {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 0.8fr;
     margin: 0;
 }
 
@@ -21,10 +21,10 @@
 
 .detailed-author {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     border-left: 2px solid #FBFEF9;
+    width: 100%;
 }
 
 .detailed-author h3 {
@@ -81,7 +81,7 @@
     justify-content: flex-start;
 }
 
-#like-section > p {
+#like-section>p {
     font-size: 25px;
     margin: 0;
 }
@@ -92,7 +92,7 @@
     justify-content: flex-start;
 }
 
-#comment-button-section > p {
+#comment-button-section>p {
     font-size: 25px;
     margin: 0;
 }
@@ -119,7 +119,7 @@
     justify-content: center;
 }
 
-.comment-box button{
+.comment-box button {
     margin: 0 10px;
 }
 
@@ -132,7 +132,7 @@
     cursor: pointer;
 }
 
-.edit-btn-icon{
+.edit-btn-icon {
     font-size: 25px;
     color: #FBFEF9;
     margin: 0;
@@ -187,4 +187,16 @@
 .delete-btn:hover {
     background-color: #a52626;
     color: #FBFEF9;
+}
+
+#avatar-loading {
+    background-color: black;
+}
+
+#avatar-detailed > img {
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
+    margin: 0 20px;
+    border: 2px solid #FBFEF9;
 }
