--- a/web-project-2/src/components/Base/Comment/Comment.css
+++ b/web-project-2/src/components/Base/Comment/Comment.css
@@ -1,6 +1,6 @@
 .single-comment {
     display: grid;
-    grid-template-rows: 1fr 1fr 0.3fr;
+    grid-template-columns: 0.3fr 2fr;
     background-color: #44633f;
     width: 90%;
     height: 70%;
@@ -8,6 +8,12 @@
     margin: 10px 0;
     border-radius: 5px;
     padding: 10px;
+}
+
+#comment-contents {
+    display: grid;
+    grid-template-rows: 1fr 1fr 0.3fr;
+    gap: 10px;
 }
 
 #comment-author {
@@ -73,4 +79,17 @@
     color: #FBFEF9;
     border: none;
     cursor: pointer;
+}
+
+#comment-avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#comment-avatar>img {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+    border: 2px solid #FBFEF9;
 }
