--- a/web-project-2/src/components/Base/Post/PostLarge.css
+++ b/web-project-2/src/components/Base/Post/PostLarge.css
@@ -24,6 +24,7 @@
     border-radius: 8px;
     border: 2px solid #FBFEF9;
     margin: 0 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.709);
 }
 
 .author-information-avatar > h2 {
