--- a/web-project-2/src/components/Base/Post/PostLarge.css
+++ b/web-project-2/src/components/Base/Post/PostLarge.css
@@ -25,6 +25,7 @@
     border: 2px solid #FBFEF9;
     margin: 0 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.709);
+    cursor: pointer;
 }
 
 .author-information-avatar > h2 {
