--- a/web-project-2/src/components/Base/Header/Header.css
+++ b/web-project-2/src/components/Base/Header/Header.css
@@ -4,31 +4,37 @@
     background-color: #44633f;
     padding: 20px;
     width: 100%;
+    height: 70px;
     position: fixed;
     top: 0;
     display: flex;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 20px 8px rgba(0, 0, 0, 0.877);
     text-align: center;
     justify-content: space-between;
     z-index: 1000;
 }
 
 .nav-link {
-    font-size: 25px;
+    font-size: 28px;
     color: #FBFEF9;
     text-decoration: none;
-    margin-right: 10px;
+    margin: 4px 10px 0 0;   
+    line-height: 1;
 }
 
 .logout-btn {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 25px;
-    padding: 5px 10px;
+    font-size: 28px;
+    line-height: 1;
+    padding: 8px 10px 4px 10px;
     background-color: #FBFEF9;
     color: #44633f;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .logout-btn:hover {
@@ -54,4 +60,10 @@
 
 .nav-link:hover {
     color: #bfc2bd;
+}
+
+.nav-text-section {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
 }
