--- a/web-project-2/src/components/Base/Logo/Logo.css
+++ b/web-project-2/src/components/Base/Logo/Logo.css
@@ -1,5 +1,8 @@
 .logo {
-    height: 4.2rem;
-    margin-left: 15px;
-    width: 150px;
+    width: auto;
+    height: 70px;
+    margin: 0 auto;
+    display: block;
+    margin: 0 0 0 40px;
 }
+
