--- a/web-project-2/src/pages/Profile/Profile.css
+++ b/web-project-2/src/pages/Profile/Profile.css
@@ -69,9 +69,8 @@
     margin: 0 0 10px 40px;
 }
 
-/* #user-stats {
+#user-stats {
     width: 340px;
-    height: 404px;
     background-color: #323b2f;
     border-radius: 8px;
     display: flex;
@@ -79,9 +78,10 @@
     align-items: center;
     justify-content: flex-start;
     position: fixed;
-    left: 72.9%;
+    left: 69%;
+    border: 2px solid #FBFEF9;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9);
-} */
+}
 
 #user-stats > h2 {
     margin: 20px 0 10px 0;
@@ -91,4 +91,10 @@
 #user-stats > h3 {
     margin: 0 0 20px 0;
     font-size: 30px;
+}
+
+#user-stats > h4 {
+    color: #c52c2c;
+    margin: 0 0 20px 0;
+    font-size: 25px;
 }
