--- a/web-project-2/src/pages/Profile/Profile.css
+++ b/web-project-2/src/pages/Profile/Profile.css
@@ -81,6 +81,7 @@
     left: 69%;
     border: 2px solid #FBFEF9;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.9);
+    margin: 0 0 15px 70px;
 }
 
 #user-stats > h2 {
