--- a/web-project-2/src/components/Base/Container/Container.css
+++ b/web-project-2/src/components/Base/Container/Container.css
@@ -11,7 +11,7 @@
     border-radius: 8px;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    /* align-items: center;     */
 }
 
 /* #232921 */
